# vim_math3d

./: .gitignore  Cargo.toml  LICENSE  README.md
lib/cpp/: CMakeLists.txt
lib/cpp/src/: CMakeLists.txt  hash.h
lib/cpp/tests/: CMakeLists.txt  test_aabox2d.cpp  test_line2d.cpp  test_quaternion.cpp  test_vector2.cpp  test_vim_math3d.h
src/: constants.rs  lib.rs  main.rs  math3d_ops.rs  stateless_random.rs  structs.rs  traits.rs  transformable.rs
src/cpp/: CMakeLists.txt  README.md
src/cpp/lib/: hash.h  math_ops.h  random.h  structs.h  value_domain.h  vim_math3d.cpp
src/cpp/tests/: CMakeLists.txt  test_dvector3.cpp  test_matrix4x4.cpp  test_plane.cpp  test_ray.cpp  test_vector3.cpp  test_vector4.cpp  test_vim_math3d.h
src/structs/: mod.rs  vector2.rs  vector3.rs
tests/: aabox_2d_tests.rs  dvector3_cross_test.rs  line2d_tests.rs  matrix4x4_tests.rs  plane_tests.rs  quaternion_tests.rs  ray_tests.rs  vector2_tests.rs  vector3_tests.rs  vector4_tests.rs
vim_math3d_macro_derive/: Cargo.toml
vim_math3d_macro_derive/src/: lib.rs
